v0.3.0/_sources/gallery/coast/shorelines.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/coast/shorelines.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_coast_shorelines.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_coast_shorelines.py:


Shorelines
----------

Use :meth:`pygmt.Figure.coast` to display shorelines as black lines.

.. GENERATED FROM PYTHON SOURCE LINES 7-15



.. image:: /gallery/coast/images/sphx_glr_shorelines_001.png
    :alt: shorelines
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>





|

.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    # Make a global Mollweide map with automatic ticks
    fig.basemap(region="g", projection="W15c", frame=True)
    # Display the shorelines as black lines with 0.5 point thickness
    fig.coast(shorelines="0.5p,black")
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.429 seconds)


.. _sphx_glr_download_gallery_coast_shorelines.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: shorelines.py <shorelines.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: shorelines.ipynb <shorelines.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
